--- a/res/site/pages/test.html
+++ b/res/site/pages/test.html
@@ -1,3 +1,4 @@
+[% INCLUDE template/header.tt2 %]
 # test
 *test       so test*
 
@@ -10,3 +11,5 @@
 <div class="pony">
 TWILIGHT SPARKLE
 </div>
+
+[% INCLUDE template/footer.tt2 %]
