--- a/res/site/public/test.html
+++ b/res/site/public/test.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title></title>
+<meta charset="utf8">
+</head>
+<body>
+
+
 <h1>test</h1>
 
 <p><em>test       so test</em></p>
@@ -12,3 +21,5 @@
 <div class="pony">
 TWILIGHT SPARKLE
 </div>
+
+</body></html>
