More advanced site compilation

--- a/res/site/pages/test.html
+++ b/res/site/pages/test.html
@@ -1,4 +1,4 @@
-[% INCLUDE template/header.tt2 %]
+[% INCLUDE header.tt2 %]
 # test
 *test       so test*
 
@@ -12,4 +12,4 @@
 TWILIGHT SPARKLE
 </div>
 
-[% INCLUDE template/footer.tt2 %]
+[% INCLUDE footer.tt2 %]
